incluindo estrutura inicial html

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
                     <span>Password</span>
                     <input type="text" id="password" name="password">
                 </label>
+                <input type="submit" value="Sign up">
             </form>
         </main>
 
         <section class="images">
-
+            <img src="assets/mobile.svg" alt="Mobile">
+            <div class="circle"></div>
         </section>
     </body>
 </html>
